# ffea

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
applications/: CMakeLists.txt
applications/elasticity/: CMakeLists.txt
applications/elasticity/inc/: computational_domain.h  constitutive_model.h  elastic_region.h  operator.h  physics_processor.h  postprocessor.h
applications/elasticity/src/: constitutive_model.cc  elastic_region.cc  physics_processor.cc  postprocessor.cc
applications/quasi_harmonic/: CMakeLists.txt
applications/quasi_harmonic/inc/: computational_domain.h  constitutive_model.h  physics_processor.h  postprocessor.h  quasi_harmonic_region.h
applications/quasi_harmonic/src/: constitutive_model.cc  physics_processor.cc  postprocessor.cc  quasi_harmonic_region.cc
examples/: CMakeLists.txt  cantilever_beam.cc  heat_sink.cc  runner.cc  runner_3d.cc  thermal_3d.cc  two_holes.cc
examples/data/: ipb200.msh
framework/: CMakeLists.txt
framework/inc/: alias.h
framework/inc/analysis/: analysis.h
framework/inc/assembly/: assembler.h
framework/inc/fileio/: geometry_parser.h  mesh_parser.h  output_writer.h
framework/inc/geometry/: coordinates.h  geometric_entity.h  geometric_entity_factory.h  geometry.h  geometry_builder.h  node.h
framework/inc/math/: CustomDenseMatrix.h  Matrix.h  Utils.h  matrix.h  shape_functions.h  utils.h
framework/inc/mesh/: Coordinates.h  Element.h  IntegrationPoint.h  Line2.h  Mesh.h  Node.h  NodeElement.h  Quad4.h  coordinates.h  degree_of_freedom.h  element.h  element_factory.h  geometric_entity.h  geometric_entity_factory.h  geometry.h  geometry_builder.h  integration_point.h  integration_points_provider.h  mesh.h  mesh_builder.h  node.h
framework/inc/model/: alias.h  boundary_condition.h  computational_domain.h  constitutive_model.h  equation.h  integrand.h  model.h  operator.h  physical_region.h  physics_processor.h  types.h
framework/inc/postprocessor/: postprocessor.h
framework/inc/processor/: Operator.h  element_processor.h  operator.h
framework/src/analysis/: analysis.cc
framework/src/assembly/: assembler.cc
framework/src/fileio/: geometry_parser.cc  mesh_parser.cc  output_writer.cc
framework/src/geometry/: coordinates.cc  geometric_entity.cc  geometric_entity_factory.cc  geometry.cc  geometry_builder.cc  node.cc
framework/src/math/: Utils.cc  shape_functions.cc  utils.cc
framework/src/mesh/: Coordinates.cc  DegreeOfFreedom.cc  Element.cc  IntegrationPoint.cc  Line2.cc  Mesh.cc  Node.cc  Quad4.cc  coordinates.cc  degree_of_freedom.cc  element.cc  element_factory.cc  geometric_entity.cc  geometric_entity_factory.cc  geometry.cc  geometry_builder.cc  integration_point.cc  integration_points_provider.cc  mesh.cc  mesh_builder.cc  node.cc
framework/src/model/: boundary_condition.cc  computational_domain.cc  constitutive_model.cc  equation.cc  integrand.cc  model.cc  operator.cc  physical_region.cc  physics_processor.cc
framework/src/postprocessor/: postprocessor.cc
framework/src/processor/: Operator.cc  PhysicsProcessor.cc  element_processor.cc  operator.cc
test/: CMakeLists.txt  boundary_condition_test.cc  geometric_entity_factory_test.cc  geometric_entity_test.cc  geometry_test.cc
